--- a/src/app/nopagefound/nopagefound.component.html
+++ b/src/app/nopagefound/nopagefound.component.html
@@ -7,7 +7,7 @@
       <h1>403</h1>
       <h3 class="text-uppercase">Forbiddon Error!</h3>
       <p class="text-muted m-t-30 m-b-30">YOU DON'T HAVE PERMISSION TO ACCESS ON THIS SERVER.</p>
-      <a href="index.html" class="btn btn-info btn-rounded waves-effect waves-light m-b-40">Back to home</a> </div>
+      <a href="../../index.html" class="btn btn-info btn-rounded waves-effect waves-light m-b-40">Back to home</a> </div>
     <footer class="footer text-center">© {{ year }} Admin Pro.</footer>
   </div>
 </section>
