--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -15,15 +15,16 @@
       <app-breadcrumbs> </app-breadcrumbs>
 
       <!-- Mi sistema de de rutas -->
-      <div class="row">
-        <div class="col-12">
-          <div class="card">
-            <div class="card-body">
-              <router-outlet></router-outlet>
-            </div>
-          </div>
-        </div>
-      </div>
+      <router-outlet></router-outlet>
+<!--      <div class="row">-->
+<!--        <div class="col-12">-->
+<!--          <div class="card">-->
+<!--            <div class="card-body">-->
+
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
 
     </div>
 
