--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,14 @@
 @import '@mdi/font/css/materialdesignicons.min.css';
+@import '@fortawesome/fontawesome-free/css/all.css';
+
 /* You can add global styles to this file, and also import other style files */
 .fast {
   -webkit-animation-duration: 0.3s;
   animation-duration: 0.3s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
+}
+
+#themecolors .selector {
+  cursor: pointer;
 }
